# linuxflip

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md  cli.c  cli.h  main.c
include/: linuxflip.h
src/: linuxflip.c
