cmake_minimum_required(VERSION 3.1...3.28)
project(LinuxFlip VERSION 0.1)

find_package(PkgConfig REQUIRED)
pkg_search_module(LIBINPUT REQUIRED libinput)
pkg_search_module(LIBUDEV REQUIRED libudev)

set(SPAWN PTHREAD CACHE STRING "Spawn method")
set_property(CACHE SPAWN PROPERTY STRINGS PTHREAD FORK)

add_executable(linuxflip main.c cli.c)
target_compile_definitions(linuxflip PRIVATE LINUXFLIP_VERSION=${PROJECT_VERSION})
if (NOT SPAWN)
	set(SPAWN PTHREAD)
endif()
if (SPAWN STREQUAL "PTHREAD")
	target_compile_definitions(linuxflip PRIVATE LINUXFLIP_SPAWN_PTHREAD=1)
elseif(SPAWN STREQUAL "FORK")
	target_compile_definitions(linuxflip PRIVATE LINUXFLIP_SPAWN_FORK=1)
else()
	message(FATAL_ERROR "invalid SPAWN option \"${SPAWN}\" (must be PTHREAD or FORK, or unset for default)")
endif()
target_include_directories(linuxflip PRIVATE ${LIBINPUT_INCLUDE_DIRS} ${LIBUDEV_INCLUDE_DIRS})
target_link_libraries(linuxflip ${LIBINPUT_LIBRARIES} ${LIBUDEV_LIBRARIES})
